--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/row/general/row.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/row/general/row.xhtml
@@ -6,13 +6,13 @@
 		<showcase:example renderedCheckbox="true">
 			<alloy:row rendered="#{showcaseModelBean.selectedComponent.rendered}">
 				<alloy:column width="33">
-					<h:outputText value="#{i18n['this-is-column-1']}" />
+					<alloy:outputText value="#{i18n['this-is-column-1']}" />
 				</alloy:column>
 				<alloy:column width="33">
-					<h:outputText value="#{i18n['this-is-column-2']}" />
+					<alloy:outputText value="#{i18n['this-is-column-2']}" />
 				</alloy:column>
 				<alloy:column width="33">
-					<h:outputText value="#{i18n['this-is-column-3']}" />
+					<alloy:outputText value="#{i18n['this-is-column-3']}" />
 				</alloy:column>
 			</alloy:row>
 		</showcase:example>
