--- a/demos/showcase/showcase-portlet/src/main/webapp/component/portlet/namespace/general/namespace.xhtml
+++ b/demos/showcase/showcase-portlet/src/main/webapp/component/portlet/namespace/general/namespace.xhtml
@@ -1,13 +1,14 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:portlet="http://java.sun.com/portlet_2_0" xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets" template="/templates/component-2col.xhtml">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
+	xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:portlet="http://java.sun.com/portlet_2_0"
+	xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	template="/templates/component-2col.xhtml">
 
 	<ui:define name="col1">
 		<!-- Example 1: Introducing a variable into the EL -->
 		<showcase:example description="#{i18n['portlet-namespace-general-example-1']}" number="1">
 			<portlet:namespace var="portletNamespace" />
 			<pre>
-				<h:outputText value="portletNamespace=#{portletNamespace}" />
+				<alloy:outputText value="portletNamespace=#{portletNamespace}" />
 			</pre>
 		</showcase:example>
 	</ui:define>
@@ -16,7 +17,7 @@
 		<!-- Example 2: Output directly to the response -->
 		<showcase:example description="#{i18n['portlet-namespace-general-example-2']}" number="2">
 			<pre>
-				<h:outputText value="portletNamespace=" />
+				<alloy:outputText value="portletNamespace=" />
 				<portlet:namespace />
 			</pre>
 		</showcase:example>
