--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputsourcecode/default-value/inputSourceCode.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputsourcecode/default-value/inputSourceCode.xhtml
@@ -4,7 +4,7 @@
 
 	<h:form>
 		<showcase:example styleClass="editableAceEditor">
-			<h:outputLabel styleClass="alloy-output-label" for="inputSourceCode" value="#{i18n['source-code']}" />
+			<alloy:outputLabel styleClass="alloy-output-label" for="inputSourceCode" value="#{i18n['source-code']}" />
 			<alloy:inputSourceCode id="inputSourceCode" height="100" mode="xml" rendered="#{showcaseModelBean.selectedComponent.rendered}"
 				required="#{showcaseModelBean.selectedComponent.required}" value="#{inputSourceCodeModelBean.sourceText}" />
 			<alloy:message for="inputSourceCode" />
