--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/link/header.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/link/header.xhtml
@@ -7,16 +7,16 @@
 		<h2>#{i18n['note']}</h2>
 		<aui:list>
 			<aui:list-item>
-				<h:link includeViewParams="true" value="alloy:link" />
-				<h:outputText escape="false" value=" #{i18n['alloy-link-benefits-description']}" />
+				<alloy:link includeViewParams="true" value="alloy:link" />
+				<alloy:outputText escape="false" value=" #{i18n['alloy-link-benefits-description']}" />
 			</aui:list-item>
 			<aui:list-item>
-				<h:link includeViewParams="true" value="alloy:outputLink">
+				<alloy:link includeViewParams="true" value="alloy:outputLink">
 					<f:param name="componentPrefix" value="alloy" />
 					<f:param name="componentName" value="outputLink" />
 					<f:param name="componentUseCase" value="general" />
-				</h:link>
-				<h:outputText escape="false" value=" #{i18n['alloy-outputlink-benefits-description']}" />
+				</alloy:link>
+				<alloy:outputText escape="false" value=" #{i18n['alloy-outputlink-benefits-description']}" />
 			</aui:list-item>
 		</aui:list>
 	</showcase:note>
