--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/messages/general/messages.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/messages/general/messages.xhtml
@@ -8,7 +8,7 @@
 		<h:form>
 			<showcase:example description="#{i18n['alloy-messages-general-example-1']}" number="1">
 				<alloy:messages />
-				<h:outputLabel for="inputText" value="#{i18n['text-field']}" />
+				<alloy:outputLabel for="inputText" value="#{i18n['text-field']}" />
 				<alloy:inputText id="inputText" label="#{i18n['text-field']}" required="true"
 					valueChangeListener="#{messageBackingBean.valueChangeListener}" />
 				<br />
@@ -24,7 +24,7 @@
 		<h:form>
 			<showcase:example description="#{i18n['alloy-messages-general-example-2']}" number="2">
 				<alloy:messages layout="table" />
-				<h:outputLabel for="inputText" value="#{i18n['text-field']}" />
+				<alloy:outputLabel for="inputText" value="#{i18n['text-field']}" />
 				<alloy:inputText id="inputText" label="#{i18n['text-field']}" required="true"
 					valueChangeListener="#{messageBackingBean.valueChangeListener}" />
 				<br />
@@ -40,7 +40,7 @@
 		<h:form>
 			<showcase:example description="#{i18n['alloy-messages-general-example-3']}" number="3">
 				<alloy:messages globalOnly="true" layout="table" />
-				<h:outputLabel for="inputText" value="#{i18n['text-field']}" />
+				<alloy:outputLabel for="inputText" value="#{i18n['text-field']}" />
 				<alloy:inputText id="inputText" label="#{i18n['text-field']}" required="true"
 					valueChangeListener="#{messageBackingBean.valueChangeListener}" />
 				<br />
