--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/row/column-offset/row.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/row/column-offset/row.xhtml
@@ -6,34 +6,34 @@
 		<showcase:example>
 			<alloy:row>
 				<alloy:column offsetWidth="25" width="75">
-					<h:outputText value="offsetWidth=&quot;25&quot; width=&quot;75&quot;" />
+					<alloy:outputText value="offsetWidth=&quot;25&quot; width=&quot;75&quot;" />
 				</alloy:column>
 			</alloy:row>
 			<alloy:row>
 				<alloy:column width="33">
-					<h:outputText value="width=&quot;33&quot;" />
+					<alloy:outputText value="width=&quot;33&quot;" />
 				</alloy:column>
 				<alloy:column offsetWidth="33" width="33">
-					<h:outputText value="offsetWidth=&quot;33&quot; width=&quot;33&quot;" />
+					<alloy:outputText value="offsetWidth=&quot;33&quot; width=&quot;33&quot;" />
 				</alloy:column>
 			</alloy:row>
 			<alloy:row>
 				<alloy:column offsetWidth="25" width="25">
-					<h:outputText value="offsetWidth=&quot;25&quot; width=&quot;25&quot;" />
+					<alloy:outputText value="offsetWidth=&quot;25&quot; width=&quot;25&quot;" />
 				</alloy:column>
 				<alloy:column offsetWidth="25" width="25">
-					<h:outputText value="offsetWidth=&quot;25&quot; width=&quot;25&quot;" />
+					<alloy:outputText value="offsetWidth=&quot;25&quot; width=&quot;25&quot;" />
 				</alloy:column>
 			</alloy:row>
 			<alloy:row>
 				<alloy:column offsetWidth="8" width="17">
-					<h:outputText value="offsetW=&quot;8&quot; w=&quot;17&quot;" />
+					<alloy:outputText value="offsetW=&quot;8&quot; w=&quot;17&quot;" />
 				</alloy:column>
 				<alloy:column offsetWidth="8" width="33">
-					<h:outputText value="offsetWidth=&quot;8&quot; width=&quot;33&quot;" />
+					<alloy:outputText value="offsetWidth=&quot;8&quot; width=&quot;33&quot;" />
 				</alloy:column>
 				<alloy:column offsetWidth="8" width="17">
-					<h:outputText value="offsetW=&quot;8&quot; w=&quot;17&quot;" />
+					<alloy:outputText value="offsetW=&quot;8&quot; w=&quot;17&quot;" />
 				</alloy:column>
 			</alloy:row>
 		</showcase:example>
