--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanycheckbox/data-model/selectManyCheckbox.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanycheckbox/data-model/selectManyCheckbox.xhtml
@@ -6,7 +6,7 @@
 	<ui:define name="col1">
 		<h:form>
 			<showcase:example>
-				<h:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
+				<alloy:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
 				<alloy:selectManyCheckbox layout="lineDirection" value="#{selectManyModelBean.favoriteIds}">
 					<f:selectItems value="#{selectManyModelBean.liferayBenefits}" var="benefit" itemValue="#{benefit.id}"
 						itemLabel="#{benefit.label}" />
