--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanylistbox/default-value/selectManyListbox.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanylistbox/default-value/selectManyListbox.xhtml
@@ -6,7 +6,7 @@
 	<ui:define name="col1">
 		<h:form>
 			<showcase:example>
-				<h:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
+				<alloy:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
 				<alloy:selectManyListbox value="#{selectManyModelBean.benefitIds}">
 					<f:converter converterId="javax.faces.Long" />
 					<f:selectItem itemLabel="Compatible" itemValue="1" />
