--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanymenu/conversion/selectManyMenu.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanymenu/conversion/selectManyMenu.xhtml
@@ -6,7 +6,7 @@
 	<ui:define name="col1">
 		<h:form>
 			<showcase:example description="#{i18n['conversion-to-a-date-using-f-convertdatetime']}">
-				<h:outputLabel styleClass="alloy-output-label" value="#{i18n['which-of-the-following-dates-are-in-the-18th-century']}" />
+				<alloy:outputLabel styleClass="alloy-output-label" value="#{i18n['which-of-the-following-dates-are-in-the-18th-century']}" />
 				<alloy:messages globalOnly="true" styleClass="feedback" />
 				<alloy:selectManyMenu value="#{selectManyModelBean.dates}">
 					<f:convertDateTime pattern="MM/dd/yyyy G" />
