--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanymenu/immediate/selectManyMenu.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanymenu/immediate/selectManyMenu.xhtml
@@ -8,7 +8,7 @@
 		<h:form>
 			<showcase:example description="#{i18n['valuechangelistener-execution-when-immediate-is-true']}"
 				longDescription="true" number="1">
-				<h:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
+				<alloy:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
 				<alloy:messages globalOnly="true" styleClass="feedback" />
 				<alloy:selectManyMenu immediate="true" layout="pageDirection" value="#{selectManyModelBean.favoriteIds}"
 					valueChangeListener="#{selectManyBackingBean.valueChangeListener}">
@@ -37,7 +37,7 @@
 		<h:form>
 			<showcase:example description="#{i18n['valuechangelistener-execution-when-immediate-is-false']}"
 				longDescription="true" number="2">
-				<h:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
+				<alloy:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
 				<alloy:messages globalOnly="true" styleClass="feedback" />
 				<alloy:selectManyMenu layout="pageDirection" value="#{selectManyModelBean.favoriteIds}"
 					valueChangeListener="#{selectManyBackingBean.valueChangeListener}">
