--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectonemenu/immediate/selectOneMenu.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectonemenu/immediate/selectOneMenu.xhtml
@@ -8,7 +8,7 @@
 		<h:form>
 			<showcase:example description="#{i18n['valuechangelistener-execution-when-immediate-is-true']}"
 				longDescription="true" number="1">
-				<h:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
+				<alloy:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
 				<alloy:messages globalOnly="true" styleClass="feedback" />
 				<alloy:selectOneMenu immediate="true" layout="pageDirection" value="#{selectOneModelBean.favoriteId}"
 					valueChangeListener="#{selectOneBackingBean.valueChangeListener}">
@@ -34,7 +34,7 @@
 		<h:form>
 			<showcase:example description="#{i18n['valuechangelistener-execution-when-immediate-is-false']}"
 				longDescription="true" number="2">
-				<h:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
+				<alloy:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
 				<alloy:messages globalOnly="true" styleClass="feedback" />
 				<alloy:selectOneMenu layout="pageDirection" value="#{selectOneModelBean.favoriteId}"
 					valueChangeListener="#{selectOneBackingBean.valueChangeListener}">
