--- a/demos/showcase/showcase-portlet/src/main/webapp/component/portlet/renderurl/general/renderURL.xhtml
+++ b/demos/showcase/showcase-portlet/src/main/webapp/component/portlet/renderurl/general/renderURL.xhtml
@@ -1,15 +1,16 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:portlet="http://java.sun.com/portlet_2_0" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
-	xmlns:ui="http://java.sun.com/jsf/facelets" template="/templates/component-3col.xhtml">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
+	xmlns:h="http://java.sun.com/jsf/html" xmlns:portlet="http://java.sun.com/portlet_2_0"
+	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" xmlns:ui="http://java.sun.com/jsf/facelets"
+	template="/templates/component-3col.xhtml">
 
 	<ui:define name="col1">
 		<showcase:example>
 			<portlet:renderURL var="renderURL">
 				<portlet:param name="foo" value="bar" />
 			</portlet:renderURL>
-			<h:outputLink value="#{renderURL}">
-				<h:outputText value="#{i18n['hyperlink-targeting-the-showcase-portlet']}" />
-			</h:outputLink>
+			<alloy:outputLink value="#{renderURL}">
+				<alloy:outputText value="#{i18n['hyperlink-targeting-the-showcase-portlet']}" />
+			</alloy:outputLink>
 		</showcase:example>
 	</ui:define>
 
