--- a/demos/showcase/showcase-webapp/src/main/webapp/templates/component-4col.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/templates/component-4col.xhtml
@@ -1,5 +1,5 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+	xmlns:ui="http://java.sun.com/jsf/facelets">
 
 	<alloy:row>
 		<alloy:column width="25">
