Dogfooding recently added components (using alloy:image)

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/general/commandButton.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/general/commandButton.xhtml
@@ -10,7 +10,7 @@
 				<alloy:commandButton rendered="#{showcaseModelBean.selectedComponent.rendered}" value="1234">
 					<alloy:icon name="star" />
 					<alloy:outputText value=" #{i18n['Button']} " />
-					<h:graphicImage value="/resources/images/liferay-faces-logo-small.png" />
+					<alloy:image value="/resources/images/liferay-faces-logo-small.png" />
 				</alloy:commandButton>
 			</showcase:example>
 		</h:form>
