--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandlink/general/commandLink.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandlink/general/commandLink.xhtml
@@ -11,7 +11,7 @@
 				<alloy:commandLink rendered="#{showcaseModelBean.selectedComponent.rendered}">
 					<alloy:icon name="star" />
 					<alloy:outputText value=" #{i18n['text-for-a-link']} " />
-					<h:graphicImage value="/resources/images/liferay-faces-logo-small.png" />
+					<alloy:image value="/resources/images/liferay-faces-logo-small.png" />
 				</alloy:commandLink>
 			</showcase:example>
 		</h:form>
