--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/button/general/button.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/button/general/button.xhtml
@@ -10,7 +10,7 @@
 				<alloy:button rendered="#{showcaseModelBean.selectedComponent.rendered}" value="1234">
 					<alloy:icon name="star" />
 					<alloy:outputText value=" #{i18n['Button']} " />
-					<h:graphicImage value="/resources/images/liferay-faces-logo-small.png" />
+					<alloy:image value="/resources/images/liferay-faces-logo-small.png" />
 				</alloy:button>
 			</showcase:example>
 		</h:form>
