--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputlink/general/outputLink.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputlink/general/outputLink.xhtml
@@ -20,7 +20,7 @@
 		<h:form>
 			<showcase:example description="#{i18n['alloy-outputlink-general-example-2']}" number="2">
 				<alloy:outputLink target="_blank" value="https://www.liferay.com/community/liferay-projects/liferay-faces">
-					<h:graphicImage value="/resources/images/liferay-faces-logo-small.png" />
+					<alloy:image value="/resources/images/liferay-faces-logo-small.png" />
 				</alloy:outputLink>
 			</showcase:example>
 		</h:form>
@@ -33,7 +33,7 @@
 				<alloy:outputLink target="_blank" value="https://www.google.com/search">
 					<alloy:icon name="star" />
 					<alloy:outputText value=" #{i18n['text-for-a-link']} " />
-					<h:graphicImage value="/resources/images/liferay-faces-logo-small.png" />
+					<alloy:image value="/resources/images/liferay-faces-logo-small.png" />
 					<f:param name="q" value="liferay faces" />
 				</alloy:outputLink>
 			</showcase:example>
