--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputtooltip/general/outputTooltip.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputtooltip/general/outputTooltip.xhtml
@@ -27,7 +27,7 @@
 		<showcase:example description="#{i18n['alloy-outputtooltip-general-example-3']}" longDescription="true" number="3">
 			<alloy:outputText id="myText" value="#{i18n['position-mouse-cursor-here']}" />
 			<alloy:outputTooltip for="myText" headerText="#{i18n['header-text']}" opacity="0.5" styleClass="tooltip-help" zIndex="0" >
-				<h:graphicImage value="/resources/images/liferay-faces-logo-small.png" />
+				<alloy:image value="/resources/images/liferay-faces-logo-small.png" />
 			</alloy:outputTooltip>
 		</showcase:example>
 	</ui:define>
