FACES-1895 Develop alloy:pickDate component (Added timeZone attribute. The attribute allows developers to specify a time zone for the SimpleDateFormat used to parse minimumDate and maximumDate if they are Strings.) FACES-1897 Develop alloy:inputDate component (Added timeZone attribute. The attribute allows developers to specify the timeZone of the built-in converter and pickDate. The timeZone attribute is also used for the SimpleDateFormat which parse minimumDate and maximumDate if they are Strings.) FACES-1714 Develop Liferay Faces Showcase (Specified the new timeZone attribute in the appropriate example for inputDate. Removed unnecessary code in model beans which set hours, minutes, and seconds to 0.)

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputdate/min-max-date/inputDate.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputdate/min-max-date/inputDate.xhtml
@@ -7,16 +7,17 @@
 		<h:form>
 			<showcase:example>
 				<alloy:inputDate id="birthday" datePattern="MM/dd/yyyy" maximumDate="#{inputDateModelBean.maxDate}"
-					minimumDate="#{inputDateModelBean.minDate}" showOn="button" value="#{inputDateModelBean.birthday}" />
+					minimumDate="#{inputDateModelBean.minDate}" showOn="button" value="#{inputDateModelBean.birthday}"
+					timeZone="America/New_York" />
 				<alloy:message for="birthday" />
 				<br />
 				<alloy:outputText value="#{i18n['valid-date-range']}: " />
 				<alloy:outputText value="#{inputDateModelBean.minDate}">
-					<f:convertDateTime pattern="MM/dd/yyyy" />
+					<f:convertDateTime pattern="MM/dd/yyyy" timeZone="America/New_York" />
 				</alloy:outputText>
 				<alloy:outputText value=" - " />
 				<alloy:outputText value="#{inputDateModelBean.maxDate}">
-					<f:convertDateTime pattern="MM/dd/yyyy" />
+					<f:convertDateTime pattern="MM/dd/yyyy" timeZone="America/New_York" />
 				</alloy:outputText>
 				<hr />
 				<alloy:commandButton value="#{i18n['submit']}">
@@ -25,7 +26,7 @@
 			</showcase:example>
 			<showcase:outputModel>
 				<alloy:outputText id="modelValue" value="#{inputDateModelBean.birthday}">
-					<f:convertDateTime pattern="MM/dd/yyyy" />
+					<f:convertDateTime pattern="MM/dd/yyyy" timeZone="America/New_York" />
 				</alloy:outputText>
 			</showcase:outputModel>
 		</h:form>
