FACES-1958 Develop alloy:autoComplete component FACES-1894 Add general utilities for Liferay Faces Alloy Components (Regenerated and added UIComponent argument to getModules() to allow modules to be included dynamically.) FACES-1954 Develop alloy:inputTime component (Change Highlight use case to Highlighter to be consistent with attribute name and alloy:autoComplete.)

--- a/demos/showcase/showcase-webapp/src/main/webapp/resources/css/component.css
+++ b/demos/showcase/showcase-webapp/src/main/webapp/resources/css/component.css
@@ -75,3 +75,8 @@
 .tab-content p {
 	text-align: middle;
 }
+
+.aui .alloy-auto-complete .yui3-aclist-item-active {
+	background: whitesmoke;
+	color: #000;
+}
