FACES-1953 Develop alloy:accordion component FACES-1901 Develop alloy:tab and alloy:tabView components (added contentClass and headerClass attributes) FACES-1894 Add general utilities for Liferay Faces Alloy Components (added NamedAjaxBehaviorEvent and FacesContext, added new constants to StringPool, added encodeClientState/decodeClientState to ClientComponentRenderer, added decodeClientBehaviors to AlloyRenderer) FACES-1714 Develop Liferay Faces Showcase (utilize recently added alloy:accordion in the showcase for categories)

--- a/alloy/src/main/resources/META-INF/resources/liferay-faces-alloy/alloy.css
+++ b/alloy/src/main/resources/META-INF/resources/liferay-faces-alloy/alloy.css
@@ -1,3 +1,11 @@
+.alloy-accordion .toggler-content{
+padding:0px 4px;
+}
+.alloy-accordion .toggler-header{
+cursor:pointer;
+font-weight:bold;
+padding:4px;
+}
 .alloy-messages {
 border:1px solid #ddd;
 -webkit-border-radius:4px;
