--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/menu/commandButton.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/menu/commandButton.xhtml
@@ -15,7 +15,7 @@
 							<alloy:icon name="pencil" />
 							<alloy:outputText value=" Edit" />
 						</alloy:link>
-						<alloy:menu label=" #{i18n['delete-options']}">
+						<alloy:menu label=" #{i18n['delete']} ">
 							<alloy:commandLink>
 								<alloy:icon name="minus-sign" />
 								<alloy:outputText value=" Soft Delete" />
@@ -24,7 +24,7 @@
 								<alloy:icon name="fire" />
 								<alloy:outputText value=" Hard Delete" />
 							</alloy:commandLink>
-							<alloy:menu label=" #{i18n['professional']}">
+							<alloy:menu label=" #{i18n['professional']} ">
 								<alloy:commandLink>
 									<alloy:icon name="star" />
 									<alloy:outputText value=" services " />
@@ -66,8 +66,8 @@
 						</alloy:link>
 						<alloy:menu>
 							<f:facet name="label">
-								<alloy:icon name="arrow-right" />
-								<alloy:outputText value=" #{i18n['delete-options']}" />
+								<alloy:icon name="trash" />
+								<alloy:outputText value=" #{i18n['delete']} " />
 							</f:facet>
 							<alloy:commandLink>
 								<alloy:icon name="minus-sign" />
@@ -80,7 +80,7 @@
 							<alloy:menu>
 								<f:facet name="label">
 									<alloy:icon name="arrow-right" />
-									<alloy:outputText value=" #{i18n['professional']}" />
+									<alloy:outputText value=" #{i18n['professional']} " />
 								</f:facet>
 								<alloy:commandLink>
 									<alloy:icon name="star" />
@@ -125,8 +125,8 @@
 						</alloy:link>
 						<alloy:menu>
 							<f:facet name="label">
-								<alloy:icon name="arrow-right" />
-								<alloy:outputText value=" #{i18n['delete-options']}" />
+								<alloy:icon name="trash" />
+								<alloy:outputText value=" #{i18n['delete']} " />
 							</f:facet>
 							<alloy:commandLink>
 								<alloy:icon name="minus-sign" />
